Fixed #svg-out initial height jump on page reload

--- a/scss/partials/_svgtext.scss
+++ b/scss/partials/_svgtext.scss
@@ -5,6 +5,7 @@ $author-size: 1.8em;
 	svg {
 		overflow: visible;
 		transition: 2s height;
+		min-height: 2em;
 	}
 
 	svg.text {
